--- a/public/app/index.html
+++ b/public/app/index.html
@@ -96,8 +96,8 @@
 <!--controllers-->
 <script src="view1/view1.js"></script>
 <script src="view2/view2.js"></script>
-<script src="Form1/form1.js"></script>
-<script src="Form2/form2.js"></script>
+<script src="form1/form1.js"></script>
+<script src="form2/form2.js"></script>
 <script src="view_form/view_form.js"></script>
 <script src="login/login.js"></script>
 
