--- a/public/app/view_form/view_form.html
+++ b/public/app/view_form/view_form.html
@@ -45,7 +45,7 @@
 
             <b> <u>
 
-                אישור חיובי רשת מים
+                אישור חיובי רשת {{form1.type_he}}
 
 
             </u>
