--- a/public/app/form1/form1.html
+++ b/public/app/form1/form1.html
@@ -23,7 +23,7 @@
 
         <div class="date-label">
             <label> תאריך </label>
-            <input type="date" ng-model="form1.date">
+            <input type="date" ng-model="form1.date" >
         </div>
 
 
@@ -77,7 +77,7 @@
                     <th> ת.ז</th>
                     <th> תאריך החיוב</th>
                     <th>שטח בניה במ"ר</th>
-                    <th> מס' יעבורים</th>
+                    <th> מס' חיבורים</th>
                     <th> שטח אדמה במ"ר</th>
                     <th> סכום החיוב ₪</th>
                 </tr>
