--- a/public/app/form1/form1.html
+++ b/public/app/form1/form1.html
@@ -20,7 +20,7 @@
 
     <div id="no" class="main-page">
         <image class="logo-town" src="components/images/logo_handasa.png" alt="Logo View"></image>
-
+<div>
         <div class="date-label">
             <label> תאריך </label>
             <input type="date" ng-model="form1.date" >
@@ -64,8 +64,7 @@
             מגרש
             <input class="input-to-form" type="text" ng-model="form1.megrash">
 
-            קיימים חיובי רשת ביוב לפי הפירוט הבא:
-
+            קיימים חיובי רשת מים לפי הפירוט הבא:
         </div>
 
         <div>
@@ -79,7 +78,7 @@
                     <th>שטח בניה במ"ר</th>
                     <th> מס' חיבורים</th>
                     <th> שטח אדמה במ"ר</th>
-                    <th> סכום החיוב ₪</th>
+                  <th>סכום החיוב ₪ \ לירות </th>
                 </tr>
                 </thead>
                 <tbody>
@@ -140,7 +139,7 @@
 
         </p>
 
-
+</div>
     </div>
 
     <div class="no-print" style="height: 100px;">
