--- a/public/app/index.html
+++ b/public/app/index.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" type="text/css" href="components/style.css">
   <link href="bower_componentss/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="bower_componentss/ng-notify/dist/ng-notify.min.css" rel="stylesheet" />
-
+  <link href="bower_componentss/sweetalert/dist/sweetalert.css" rel="stylesheet" />
 
 </head>
 <body dir="rtl">
@@ -32,6 +32,7 @@
 
       <li class="clickable" ng-click="logout()"><a ><span class="glyphicon glyphicon-log-out"></span> יציאה</a></li>
 
+        <img src="components/images/habib.jpeg" class=" navbar-brand logo-habib">
 
     </ul>
     <div class="navbar-header navbar-right">
@@ -42,7 +43,7 @@
     </div>
     <ul class="nav navbar-nav navbar-right" dir="rtl">
 
-      !--<li class="dropdown clickable"><a class="dropdown-toggle" data-toggle="dropdown" >טופס חדש <span class="caret"></span></a>
+      <li class="dropdown clickable"><a class="dropdown-toggle" data-toggle="dropdown" >טופס חדש <span class="caret"></span></a>
       <ul class="dropdown-menu">
         <li><a href="#!/form1">
           אישור חיובי רשת מים
@@ -52,7 +53,7 @@
         </a></li>
 
       </ul>
-    </li>-->
+    </li>
       <li ><a href="#view1">ראשי</a></li>
     </ul>
 
@@ -88,7 +89,7 @@
   <script type="text/javascript" src="plugins/png_support.js"></script>
   <script src="bower_componentss/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="bower_componentss/ng-notify/dist/ng-notify.min.js"></script>
-
+<script src="bower_componentss/sweetalert/dist/sweetalert.min.js"></script>
 
 
 <!--app-->
@@ -99,6 +100,7 @@
 <script src="form1/form1.js"></script>
 <script src="form2/form2.js"></script>
 <script src="view_form/view_form.js"></script>
+<script src="view_form2/view_form2.js"></script>
 <script src="login/login.js"></script>
 
 <!--services-->
