--- a/public/app/view_form2/view_form2.html
+++ b/public/app/view_form2/view_form2.html
@@ -68,7 +68,7 @@
             מגרש
             <input class="input-to-form" type="text" ng-model="form1.megrash" disabled>
 
-            קיימים חיובי רשת מים לפי הפירוט הבא:
+            קיימים חיובי רשת ביוב לפי הפירוט הבא:
 
         </div>
 
@@ -81,9 +81,9 @@
                     <th> ת.ז</th>
                     <th> תאריך החיוב</th>
                     <th>שטח בניה במ"ר</th>
-                    <th> מס' חיבורים</th>
+                    <!-- <th> מס' יעבורים</th>-->
                     <th> שטח אדמה במ"ר</th>
-                    <th>סכום החיוב ₪ \ לירות </th>
+                    <th> סכום החיוב ₪</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -115,12 +115,12 @@
                         </p>
 
                     </td>
-                    <td>
+<!--                    <td>
                         <p>
                             {{row.col5}}
                         </p>
 
-                    </td>
+                    </td>-->
                     <td>
                         <p>
                             {{row.col6}}
