--- a/public/app/view1/view1.html
+++ b/public/app/view1/view1.html
@@ -120,7 +120,7 @@
 
 <div >
 
-    <div   ng-repeat="form in forms_list" >
+    <div   ng-repeat="form in forms_list | filter : filterName" >
         <button type="button" class="btn btn-danger delete-form" style="float: left" ng-click="deleteFormById(form._id)"><span
                 class="glyphicon glyphicon-minus"></span></button>
 
