--- a/public/app/index.html
+++ b/public/app/index.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" type="text/css" href="components/style.css">
   <link href="bower_componentss/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="bower_componentss/ng-notify/dist/ng-notify.min.css" rel="stylesheet" />
-  <link href="bower_componentss/sweetalert/dist/sweetalert.css" rel="stylesheet" />
+ <!-- <link href="bower_componentss/sweetalert/dist/sweetalert.css" rel="stylesheet" />-->
 
 </head>
 <body dir="rtl">
@@ -43,17 +43,29 @@
     </div>
     <ul class="nav navbar-nav navbar-right" dir="rtl">
 
-      <li class="dropdown clickable"><a class="dropdown-toggle" data-toggle="dropdown" >טופס חדש <span class="caret"></span></a>
+      <li class="dropdown clickable"><a class="dropdown-toggle" data-toggle="dropdown" >  אישור חיובי רשת ביוב <span class="caret"></span></a>
       <ul class="dropdown-menu">
-        <li><a href="#!/form1">
-          אישור חיובי רשת מים
+        <li><a href="#!/form2?isOld=true">
+          שטח בנוי
         </a></li>
-        <li><a href="#!/form2">
-          אישור חיובי רשת ביוב
+        <li><a href="#!/form2?isOld=false">
+          גוש / חלקה / מגרש
         </a></li>
 
       </ul>
     </li>
+
+      <li class="dropdown clickable"><a class="dropdown-toggle" data-toggle="dropdown" >אישור חיובי רשת מים  <span class="caret"></span></a>
+        <ul class="dropdown-menu" >
+          <li><a href="#!/form1?isOld=true">
+            שטח בנוי
+          </a></li>
+          <li><a href="#!/form1?isOld=false">
+            גוש / חלקה / מגרש
+          </a></li>
+
+        </ul>
+      </li>
       <li ><a href="#view1">ראשי</a></li>
     </ul>
 
@@ -89,7 +101,7 @@
   <script type="text/javascript" src="plugins/png_support.js"></script>
   <script src="bower_componentss/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="bower_componentss/ng-notify/dist/ng-notify.min.js"></script>
-<script src="bower_componentss/sweetalert/dist/sweetalert.min.js"></script>
+<!--<script src="bower_componentss/sweetalert/dist/sweetalert.min.js"></script>-->
 
 
 <!--app-->
