--- a/public/app/view1/view1.html
+++ b/public/app/view1/view1.html
@@ -1,53 +1,84 @@
 <div class="container search-box" >
     <h2 class="blue">חיפוש טפסים</h2>
     <br>
-    <div class="row" >
-        <div class="col-lg-12 ">
-            <div class="row">
+    <div class="search-area">
 
-                <div class=" col-xs-2">
+            <div class="row">
+                <div class=" row ">
+
+
+                    <div class=" col-xs-3">
+                        <input type="text" class="form-control" name="x" placeholder="שם" ng-model="query.name">
+                    </div>
+                    <div class=" col-xs-3">
+                        <input type="text" class="form-control" name="x" placeholder="ת.ז" ng-model="query.id">
+                    </div>
+                </div>
+                <br>
+                <br> <br>
+                <div class="row">
+
+
+
+
+
+                    <div class=" col-xs-2">
+                        <input type="text" class="form-control" name="x" placeholder="מגרש" ng-model="query.megrash">
+                    </div>
+
+                    <div class=" col-xs-2">
+                        <input type="text" class="form-control" name="x" placeholder="חלקה" ng-model="query.helka">
+                    </div>
+                    <div class=" col-xs-2">
+                        <input type="text" class="form-control" name="x" placeholder="גוש" ng-model="query.gosh">
+                    </div>
+                </div>
+
+
+                <br><br><br>
+
+                <div class="row">
+                    <div class=" col-xs-2">
                 <span class="input-group-btn">
                     <button class="btn btn-success" type="button" ng-click="goSearchBy()"  title="חיפוש"> &nbsp;&nbsp;<span
                             class="glyphicon glyphicon-search"> </span>&nbsp;&nbsp;&nbsp;</button>
                 </span>
 
-                    <span class="input-group-btn">
+                        <span class="input-group-btn">
                     <button class="btn btn-default" type="button" ng-click="clearSearch()"  title="ניקוי"><span
                             class="glyphicon glyphicon-repeat"></span></button>
                 </span>
-                </div>
+                    </div>
+                    <div class=" col-xs-2">
+                        <select ng-model="query.isOld" class="form-control">
+                            <option value="none" selected >  כל הבניינים
+                            </option>
+                            <option value="true">שטח בנוי
+                            </option>
+                            <option value="false"> גוש/ חלקה/ מגרש
+                            </option>
+                        </select>
+                    </div>
+                    <div class=" col-xs-2">
+                        <select ng-model="query.type" class="form-control">
+                            <option value="none" selected >  כל הטפסים
+                            </option>
+                            <option value="water">רשת מים
+                            </option>
+                            <option value="sewerage">רשת ביוב
+                            </option>
+                        </select>
+                    </div>
 
 
-                <div class=" col-xs-2">
-                    <select ng-model="query.type" class="form-control">
-                        <option value="none" selected disabled> סוג טופס
-                        </option>
-                        <option value="water">רשת מים
-                        </option>
-                        <option value="sewerage">רשת ביוב
-                        </option>
-                    </select>
                 </div>
 
-                <div class=" col-xs-2">
-                    <input type="text" class="form-control" name="x" placeholder="מגרש" ng-model="query.megrash">
-                </div>
-
-                <div class=" col-xs-2">
-                    <input type="text" class="form-control" name="x" placeholder="חלקה" ng-model="query.helka">
-                </div>
-                <div class=" col-xs-2">
-                    <input type="text" class="form-control" name="x" placeholder="גוש" ng-model="query.gosh">
-                </div>
-                <div class=" col-xs-2">
-                    <input type="text" class="form-control" name="x" placeholder="שם" ng-model="query.name">
-                </div>
 
                 <input type="hidden" name="search_param" value="all" id="search_param">
 
 
             </div>
-        </div>
+
     </div>
 </div>
 
@@ -62,65 +93,11 @@
                        0 תוצאות
     </h3>
 
-  <!--  <section class="content" style="width: 50%; background:rgba(139, 139, 139, 0.2)" ng-if=" forms_list.length>=0">
-        &lt;!&ndash; row &ndash;&gt;
-        <div class="row">
-            <div class="col-md-12">
-                &lt;!&ndash; The time line &ndash;&gt;
-                <ul class="timeline">
 
-
-
-                    <li ng-repeat="form in forms_list" ng-click="OpenForm(form._id)" class="item-in-search clickable">
-
-                        <div class="timeline-item">
-                            <h3 class="timeline-header"><a href="http://kmitsolutions.com" target="_blank">
-                                לכבוד: {{form.name}} </a>
-
-
-                            </h3>
-                            <div class="timeline-body">
-
-
-                                <table>
-                                    <tr>
-                                        <div>
-                                            <td><img src="components/images/form.png" class=" img-lg"></td>
-                                        </div>
-                                        <td>
-                                            <ul>
-                                                <bold>
-                                                    <li>תאריך : {{form.date | date:"dd/MM/yyyy"}}</li>
-                                                    <li>גוש : {{form.gosh}}</li>
-                                                    <li>חלקה : {{form.helka}}</li>
-                                                    <li>מגרש : {{form.megrash}}</li>
-                                                </bold>
-
-                                            </ul>
-                                        </td>
-                                    </tr>
-
-                                </table>
-                            </div>
-
-                        </div>
-
-                    </li>
-
-
-                    <li>
-                        <i class="fa fa-arrows bg-gray"></i>
-                    </li>
-                </ul>
-            </div>&lt;!&ndash; /.col &ndash;&gt;
-        </div>
-
-
-    </section>--><!-- /.content -->
 
 <div >
 
-    <div   ng-repeat="form in forms_list | filter : filterName" >
+    <div   ng-repeat="form in forms_list | filter :  filterName" >
         <button type="button" class="btn btn-danger delete-form" style="float: left" ng-click="deleteFormById(form._id)"><span
                 class="glyphicon glyphicon-minus"></span></button>
 
