changes updates part 2

--- a/public/app/form2/form2.html
+++ b/public/app/form2/form2.html
@@ -24,6 +24,7 @@
         <div class="date-label">
             <label> תאריך </label>
             <input type="date" ng-model="form1.date" class="input-date" >
+            <label class="date-label-for-print" > {{form1.date | date:'MM/dd/yyyy'}}</label>
         </div>
 
 
@@ -137,7 +138,7 @@
         <label class="end_paregraph">יש לציין שכל החיובים הנ"ל בוצעו במועצה מקומית כפר יאסיף. </label>
         <br>
         <button class="no-print add-remove-note btn btn-success btn-lg " ng-click="addRemoveNote(true)" ng-if="!form1.note.isNote">הוספת הערה</button>
-        <button class="no-print add-remove-note btn btn-danger btn-lg " ng-click="addRemoveNote(false)" ng-if="form1.note.isNote">הוספת הערה</button>
+        <button class="no-print add-remove-note btn btn-danger btn-lg " ng-click="addRemoveNote(false)" ng-if="form1.note.isNote">הסרת הערה</button>
         <br>     <br>
         <textarea class="note-for-form" ng-model="form1.note.noteText"  ng-if="form1.note.isNote">
 
