--- a/public/app/view_form/view_form.html
+++ b/public/app/view_form/view_form.html
@@ -53,17 +53,17 @@
             </u>
             </b>
         </label>
-        <div class="paregraph" ng-if="form1.isOld=='true'">
+        <div class="paregraph" ng-if="form1.isOld==true">
 
 
             הריני לאשר בזאת שעל המבנה הקיים בשטח הבנוי
 
             קיימים חיובי רשת מים לפי הפירוט הבא:
         </div>
-        <div class="paregraph" ng-if="form1.isOld=='false'">
+        <div class="paregraph" ng-if="form1.isOld==false">
 
 
-            הריני לאשר בזאת שעל המבנה הקיים בשטח הבנוי / בגוש
+            הריני לאשר בזאת שעל המבנה הקיים  בגוש
             <input class="input-to-form input-gosh"type="text" ng-model="form1.gosh" disabled>
 
             חלקה
