search for name and id

--- a/public/app/view1/view1.html
+++ b/public/app/view1/view1.html
@@ -97,7 +97,7 @@
 
 <div >
 
-    <div   ng-repeat="form in forms_list | filter :  filterName" >
+    <div   ng-repeat="form in forms_list" >
         <button type="button" class="btn btn-danger delete-form" style="float: left" ng-click="deleteFormById(form._id)"><span
                 class="glyphicon glyphicon-minus"></span></button>
 
