update design form

--- a/public/app/form1/form1.html
+++ b/public/app/form1/form1.html
@@ -1,5 +1,5 @@
 <!--<p id="ignorePDF">don't print this to pdf</p>-->
-<div style="background-color: #b1b1b1">
+<div>
     <div class="no-print" style="height: 10px;">
 
     </div>
