--- a/public/app/form2/form2.html
+++ b/public/app/form2/form2.html
@@ -117,7 +117,7 @@
                     </td>
 
                     <td>
-                        <textarea rows="2"  class="input-in-table" ng-model="row.col7"> </textarea>
+                        <textarea rows="2"  class="input-in-table" ng-model="row.col7" ng-blur="replaceShekel(row);"> </textarea>
                     </td>
 
                 </tr>
