update date filter for label to print

--- a/public/app/form1/form1.html
+++ b/public/app/form1/form1.html
@@ -24,7 +24,7 @@
         <div class="date-label">
             <!--<label> תאריך </label>-->
             <input type="date" ng-model="form1.date" class="input-date" >
-            <label class="date-label-for-print" > {{form1.date | date:'MM/dd/yyyy'}}</label>
+            <label class="date-label-for-print" > {{form1.date |date:"dd/MM/yyyy"}}</label>
         </div>
 
 
