--- a/public/app/view_form2/view_form2.html
+++ b/public/app/view_form2/view_form2.html
@@ -23,7 +23,7 @@
 
         <div class="date-label">
             <!--<label> תאריך </label>-->
-            {{form1.date | date:"MM/dd/yyyy"}}
+            {{form1.date | date:"dd/MM/yyyy"}}
 
 
         </div>
