option to edit forms

--- a/public/app/index.html
+++ b/public/app/index.html
@@ -113,6 +113,8 @@
 <script src="form2/form2.js"></script>
 <script src="view_form/view_form.js"></script>
 <script src="view_form2/view_form2.js"></script>
+<script src="edit_form1/edit_form1.js"></script>
+<script src="edit_form2/edit_form2.js"></script>
 <script src="login/login.js"></script>
 
 <!--services-->
