--- a/public/app/view1/view1.html
+++ b/public/app/view1/view1.html
@@ -100,6 +100,8 @@
     <div   ng-repeat="form in forms_list" >
         <button type="button" class="btn btn-danger delete-form" style="float: left" ng-click="deleteFormById(form._id)"><span
                 class="glyphicon glyphicon-minus"></span></button>
+        <button type="button" class="btn btn-success edit-form" style="float: left" ng-click="editFormById(form.type,form._id)"><span
+                class="glyphicon glyphicon-edit"></span></button>
 
         <div class="item-in-search clickable" ng-click="OpenForm(form.type,form._id)" >
 
