--- a/public/app/view1/view1.html
+++ b/public/app/view1/view1.html
@@ -109,7 +109,7 @@
             <span style="font-weight: bold; font-size:17px ">{{form.table_details[0].col1}}
             </span>
 
-            <span style="font-weight: bold; font-size:13px; float: left;">{{form.date | date:"MM/dd/yyyy"}}
+            <span style="font-weight: bold; font-size:13px; float: left;">{{form.date | date:"dd/MM/yyyy"}}
             </span>
             <br>
             <div ng-if="!form.isOld">
