--- a/public/app/edit_form1/edit_form1.html
+++ b/public/app/edit_form1/edit_form1.html
@@ -152,7 +152,7 @@
             <br>
             מהנדס המועצה
             <br>
-            יוסף אליאס
+            מג'ד סעיד
             <br>
 
         </p>
