--- a/public/app/view_form/view_form.html
+++ b/public/app/view_form/view_form.html
@@ -169,7 +169,7 @@
             <br>
             מהנדס המועצה
             <br>
-            יוסף אליאס
+            מג'ד סעיד
             <br>
 
         </p>
