--- a/public/app/view_form2/view_form2.html
+++ b/public/app/view_form2/view_form2.html
@@ -166,7 +166,7 @@
             <br>
             מהנדס המועצה
             <br>
-            יוסף אליאס
+            מג'ד סעיד
             <br>
 
         </p>
